<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="chris.myapplication.GameSelectionActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divison_textview"
            android:id="@+id/textView3"
            android:textSize="@dimen/spinner_text_size"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/spinnerDivisionSelectEnd"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_team_textview"
            android:id="@+id/textView"
            android:textSize="@dimen/spinner_text_size"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/spinnerHomeTeamSelectEnd"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home Score"
            android:id="@+id/textView5"
            android:textSize="@dimen/spinner_text_size"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:id="@+id/editTextHomeEndScore"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/away_team_textview"
            android:id="@+id/textView2"
            android:textSize="@dimen/spinner_text_size"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/spinnerAwayTeamSelectEnd"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Away Score"
            android:id="@+id/textView4"
            android:textSize="@dimen/spinner_text_size"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:id="@+id/editTextAwayEndScore"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_textview"
            android:id="@+id/textView7"
            android:textSize="@dimen/spinner_text_size"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateEnd"
            android:layout_weight="3"
            android:textSize="@dimen/spinner_text_size"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_textview"
            android:id="@+id/buttonChangeDateEnd"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateStringEnd"
            android:visibility="gone"
            android:text="20150301"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Submit Score"
            android:id="@+id/buttonSubmitScoreGameEnd"/>
    </TableRow>

</TableLayout>
